--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -24,31 +24,12 @@ description: >- # this means to ignore newlines until "baseurl:"
   A website that provides documentation and resources for BrightScript developers.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://brightscript.dev" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+twitter_username: lvcabral
+github_username:  lvcabral
 
 # Build settings
-remote_theme: pages-themes/midnight@v0.2.0
+theme: jekyll-theme-hacker
 plugins:
   - jekyll-feed
   - jekyll-remote-theme
 
-# Exclude from processing.
-# The following items will not be processed, by default.
-# Any item listed under the `exclude:` key here will be automatically added to
-# the internal "default list".
-#
-# Excluded items can be processed by explicitly listing the directories or
-# their entries' file path in the `include:` list.
-#
-# exclude:
-#   - .sass-cache/
-#   - .jekyll-cache/
-#   - gemfiles/
-#   - Gemfile
-#   - Gemfile.lock
-#   - node_modules/
-#   - vendor/bundle/
-#   - vendor/cache/
-#   - vendor/gems/
-#   - vendor/ruby/
